@@ -1077,6 +1077,7 @@ TclWordKnownAtCompileTime(
 {
     int numComponents = tokenPtr->numComponents;
     Tcl_Obj *tempPtr = NULL;
+    char *collapsed=NULL;
 
     if (tokenPtr->type == TCL_TOKEN_SIMPLE_WORD) {
 	if (valuePtr != NULL) {
@@ -1100,6 +1101,17 @@ TclWordKnownAtCompileTime(
 	    }
 	    break;
 
+	case TCL_TOKEN_UNCOLLAPSED_TEXT:
+	    if (tempPtr != NULL) {
+		if (collapsed)
+		    collapsed=ckrealloc(collapsed,tokenPtr->size);
+		else
+		    collapsed=ckalloc(tokenPtr->size);
+		Tcl_AppendToObj(tempPtr, collapsed, TclCopyAndCollapse(tokenPtr->size,tokenPtr->start,collapsed));
+	    }
+	    break;
+
+
 	case TCL_TOKEN_BS:
 	    if (tempPtr != NULL) {
 		char utfBuf[TCL_UTF_MAX];
@@ -1110,12 +1122,14 @@ TclWordKnownAtCompileTime(
 
 	default:
 	    if (tempPtr != NULL) {
+		if (collapsed) ckfree(collapsed);
 		Tcl_DecrRefCount(tempPtr);
 	    }
 	    return 0;
 	}
 	tokenPtr++;
     }
+    if (collapsed) ckfree(collapsed);
     if (valuePtr != NULL) {
 	Tcl_AppendObjToObj(valuePtr, tempPtr);
 	Tcl_DecrRefCount(tempPtr);
@@ -1447,8 +1461,20 @@ TclCompileScript(
 		     * namespaces to reduce shimmering.
 		     */
 
-		    objIndex = TclRegisterNewNSLiteral(envPtr,
-			    tokenPtr[1].start, tokenPtr[1].size);
+		    if (tokenPtr[1].type & TCL_TOKEN_UNCOLLAPSED_TEXT)
+			{
+			    char *s;
+			    int n;
+
+			    s=ckalloc(tokenPtr[1].size);
+			    n=TclCopyAndCollapse(tokenPtr[1].size,tokenPtr[1].start,s);
+			    objIndex = TclRegisterLiteral(envPtr,s,n,LITERAL_NS_SCOPE|LITERAL_ON_HEAP);
+			}
+		    else
+			{
+			    objIndex = TclRegisterNewNSLiteral(envPtr,
+							       tokenPtr[1].start, tokenPtr[1].size);
+			}
 		    if (cmdPtr != NULL) {
 			TclSetCmdNameObj(interp,
 			      envPtr->literalArrayPtr[objIndex].objPtr,cmdPtr);
@@ -1471,8 +1497,20 @@ TclCompileScript(
 		     * unmodified. We care only if the we are in a context
 		     * which already allows absolute counting.
 		     */
-		    objIndex = TclRegisterNewLiteral(envPtr,
-			    tokenPtr[1].start, tokenPtr[1].size);
+		    if (tokenPtr[1].type & TCL_TOKEN_UNCOLLAPSED_TEXT)
+			{
+			    char *s;
+			    int n;
+
+			    s=ckalloc(tokenPtr[1].size);
+			    n=TclCopyAndCollapse(tokenPtr[1].size,tokenPtr[1].start,s);
+			    objIndex = TclRegisterLiteral(envPtr,s,n,LITERAL_ON_HEAP);
+			}
+		    else
+			{
+			    objIndex = TclRegisterNewLiteral(envPtr,
+							     tokenPtr[1].start, tokenPtr[1].size);
+			}
 
 		    if (eclPtr->type == TCL_LOCATION_SOURCE) {
 			EnterCmdWordIndex(eclPtr,
@@ -1609,6 +1647,7 @@ TclCompileTokens(
     int numObjsToConcat, nameBytes, localVarName, localVar;
     int length, i;
     unsigned char *entryCodeNext = envPtr->codeNext;
+    char *collapsed=NULL;
 
     Tcl_DStringInit(&textBuffer);
     numObjsToConcat = 0;
@@ -1616,6 +1655,14 @@ TclCompileTokens(
 	switch (tokenPtr->type) {
 	case TCL_TOKEN_TEXT:
 	    Tcl_DStringAppend(&textBuffer, tokenPtr->start, tokenPtr->size);
+	    break;
+
+	case TCL_TOKEN_UNCOLLAPSED_TEXT:
+	    if (collapsed)
+		collapsed=ckrealloc(collapsed,tokenPtr->size);
+	    else
+		collapsed=ckalloc(tokenPtr->size);
+	    Tcl_DStringAppend(&textBuffer, collapsed, TclCopyAndCollapse(tokenPtr->size,tokenPtr->start,collapsed));
 	    break;
 
 	case TCL_TOKEN_BS:
@@ -1732,6 +1779,8 @@ TclCompileTokens(
 		    tokenPtr->type, tokenPtr->size, tokenPtr->start);
 	}
     }
+
+    if (collapsed) ckfree(collapsed);
 
     /*
      * Push any accumulated characters appearing at the end.
