@@ -3452,6 +3452,9 @@ PrintParse(
 	case TCL_TOKEN_TEXT:
 	    typeString = "text";
 	    break;
+	case TCL_TOKEN_UNCOLLAPSED_TEXT:
+	    typeString = "text-to-collapse";
+	    break;
 	case TCL_TOKEN_BS:
 	    typeString = "backslash";
 	    break;
